[gd_scene load_steps=17 format=1]

[ext_resource path="res://scripts/levelSelect.gd" type="Script" id=1]
[ext_resource path="res://textures/background.png" type="Texture" id=2]
[ext_resource path="res://textures/NeonLogo_Logo.png" type="Texture" id=3]
[ext_resource path="res://textures/NeonLogo_ShadowGrit.png" type="Texture" id=4]
[ext_resource path="res://textures/NeonLogo_Neon.png" type="Texture" id=5]
[ext_resource path="res://textures/NeonLogo_GlowMap.png" type="Texture" id=6]
[ext_resource path="res://textures/levelSelectWalls.png" type="Texture" id=7]
[ext_resource path="res://textures/ButtonUp.png" type="Texture" id=8]
[ext_resource path="res://textures/ButtonDown.png" type="Texture" id=9]
[ext_resource path="res://audio/neonStartup.ogg" type="AudioStream" id=10]
[ext_resource path="res://textures/websitebutton.png" type="Texture" id=11]
[ext_resource path="res://textures/speakerOn.png" type="Texture" id=12]
[ext_resource path="res://audio/buttonPress.wav" type="Sample" id=13]

[sub_resource type="Animation" id=1]

resource/name = "fadeIn"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("TextureFrameShadow:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureFrameWhite:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureFrameBlue:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Light2D:energy")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.6, 0.7 ),
"transitions": FloatArray( 0, 0, 0, 0, 0, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0, 10.0, 3.0, 5.0 ]
}

[sub_resource type="Animation" id=2]

resource/name = "flicker"
length = 0.3
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:energy")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 0, 0, 0, 0 ),
"update": 0,
"values": [ 5.0, 6.0, 5.0, 6.0 ]
}

[sub_resource type="SampleLibrary" id=3]

samples/buttonPress = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 13 )
}

[node name="levelSelect" type="Node"]

script/script = ExtResource( 1 )

[node name="TextureFrameBackground" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 540.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="TextureFrameShadow" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 1.0
margin/right = 295.0
margin/bottom = 171.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="TextureFrameWhite" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 1.0
margin/right = 295.0
margin/bottom = 171.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="TextureFrameBlue" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 1.0
margin/right = 295.0
margin/bottom = 171.0
texture = ExtResource( 5 )
stretch_mode = 0

[node name="Light2D" type="Light2D" parent="."]

transform/pos = Vector2( 149.299, 83.9278 )
enabled = true
editor_only = false
texture = ExtResource( 6 )
offset = Vector2( 0, 0 )
scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 0.0
mode = 2
range/height = 0.0
range/z_min = -1024
range/z_max = 1024
range/layer_min = 0
range/layer_max = 0
range/item_mask = 1
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 176.0
margin/right = 10.0
margin/bottom = 32.0
scroll/horizontal = false
scroll/vertical = true
scroll/deadzone = 0

[node name="Control" type="Control" parent="ScrollContainer"]

rect/min_size = Vector2( 270, 600 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 270.0
margin/bottom = 600.0

[node name="TextureFrameWalls" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 540.0
texture = ExtResource( 7 )
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fadeIn = SubResource( 1 )
anims/flicker = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "fadeIn"

[node name="TextureButtonUp" type="TextureButton" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 489.0
margin/right = 150.0
margin/bottom = 529.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="TextureButtonDown" type="TextureButton" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 150.0
margin/top = 490.0
margin/right = 290.0
margin/bottom = 530.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 10 )
stream/play = true
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.1
stream/buffering_ms = 500

[node name="TextureButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 11.0
margin/top = 512.0
margin/right = 290.0
margin/bottom = 528.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="TextureButtonSound" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 100.0
margin/right = 72.0
margin/bottom = 132.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 12 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 3 )
config/pitch_random = 0.0

[connection signal="finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]

[connection signal="button_down" from="TextureButtonUp" to="." method="_on_TextureButtonUp_button_down"]

[connection signal="button_down" from="TextureButtonDown" to="." method="_on_TextureButtonDown_button_down"]

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]

[connection signal="pressed" from="TextureButtonSound" to="." method="_on_TextureButtonSound_pressed"]


